--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   squid_db:
     container_name: squid_db
-    hostname: squid_db
+    hostname: squid-db
     image: postgres:14
     restart: unless-stopped
     environment:
@@ -28,11 +28,12 @@ services:
 
   squid_processor:
     container_name: squid_processor
-    hostname: squid_processor
+    hostname: squid-processor
     image: node:18
     restart: unless-stopped
     env_file:
       - .env
+      - .docker.env
     ports:
       - '127.0.0.1:${PROCESSOR_PROMETHEUS_PORT}:${PROCESSOR_PROMETHEUS_PORT}'
       - '[::1]:${PROCESSOR_PROMETHEUS_PORT}:${PROCESSOR_PROMETHEUS_PORT}'
@@ -49,11 +50,12 @@ services:
 
   squid_graphql-server:
     container_name: squid_graphql-server
-    hostname: squid_graphql-server
+    hostname: squid-graphql-server
     image: node:18
     restart: unless-stopped
     env_file:
       - .env
+      - .docker.env
     environment:
       - SQD_TRACE=authentication
     depends_on:
