--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm run generate:schema; rm -rf lib && tsc",
     "lint": "eslint --ext .ts ./src",
     "format": "prettier --write .",
-    "checks": "prettier --check . && npm run lint && make codegen && tsc --noEmit --pretty",
+    "checks": "prettier --check . && npm run lint && make prepare && tsc --noEmit --pretty",
     "db:migrate": "npx squid-typeorm-migration apply",
     "processor-start": "node -r dotenv-expand/config lib/processor.js",
     "graphql-server-start": "NODE_ENV=production patch-package --patch-dir assets/patches && squid-graphql-server --subscriptions",
