add opentelemetry integration

--- a/.env
+++ b/.env
@@ -19,3 +19,10 @@ RPC_ENDPOINT=wss://rpc.joystream.org:9944
 # Uncommenting this line enables the debug mode
 # More info at https://docs.subsquid.io/basics/logging/
 #SQD_DEBUG=*
+
+# =====================================================================================
+
+## Telemetry
+# yes/no
+TELEMETRY_ENABLED=no
+TELEMETRY_ENDPOINT=http://apm-server:8200
