--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "db:migrate": "npx squid-typeorm-migration apply",
     "get-graphql-schema": "./scripts/get-graphql-schema.sh",
     "processor-start": "node -r dotenv-expand/config lib/processor.js",
-    "graphql-server-start": "NODE_ENV=production ./scripts/start-graphql-server.sh",
+    "graphql-server-start": "./scripts/start-graphql-server.sh",
     "postinstall": "patch-package --patch-dir assets/patches"
   },
   "overrides": {
@@ -26,7 +26,6 @@
   },
   "dependencies": {
     "@joystream/js": "^1.4.0",
-    "@openapitools/openapi-generator-cli": "^2.5.2",
     "@opentelemetry/api": "^1.4.1",
     "@opentelemetry/auto-instrumentations-node": "0.37.0",
     "@opentelemetry/core": "1.13.0",
@@ -42,7 +41,6 @@
     "@subsquid/substrate-processor": "^7.2.1",
     "@subsquid/typeorm-migration": "^1.2.2",
     "@subsquid/typeorm-store": "^1.2.4",
-    "ajv": "^6.11.0",
     "async-lock": "^1.3.1",
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
