--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -51,3 +51,8 @@ jobs:
         run: |
           docker image tag joystream/storage-squid:latest joystream/storage-squid:${{ steps.extract_version.outputs.squid_version }}
           docker push joystream/storage-squid:${{ steps.extract_version.outputs.squid_version }}
+
+      - name: Push storage-squid latest tag
+        if: github.ref == 'refs/heads/master'
+        run: |
+          docker push joystream/storage-squid:latest
