fix query to return up to date package version each time

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lodash": "^4.17.21",
     "patch-package": "^6.5.0",
     "pg": "8.8.0",
+    "pkg-dir": "^4.2.0",
     "type-graphql": "^1.2.0-rc.1",
     "typeorm": "^0.3.11"
   },
