add env variable for RPC rate limit

--- a/.env
+++ b/.env
@@ -16,6 +16,9 @@ ARCHIVE_GATEWAY_URL=${CUSTOM_ARCHIVE_GATEWAY_URL:-https://v2.archive.subsquid.io
 # Use private endpoints in production!
 RPC_ENDPOINT=wss://rpc.joystream.org:9944
 
+# Rate limit for RPC sync
+RPC_RATE_LIMIT=10
+
 # Uncommenting this line enables the debug mode
 # More info at https://docs.subsquid.io/basics/logging/
 #SQD_DEBUG=*
